--- a/src/styles.css
+++ b/src/styles.css
@@ -230,3 +230,51 @@ h1 {
     transform: translateY(0%);
   }
 }
+
+/* 
+  Keyboard
+*/
+
+.keyboard-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 6px;
+}
+
+.keyboard-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  column-gap: 6px;
+}
+
+.keyboard-key {
+  aspect-ratio: 1;
+  width: 3em;
+  line-height: 3em;
+  border-radius: 6px;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  background-color: var(--color-gray-900);
+}
+
+.keyboard-key.correct {
+  background: var(--color-success);
+  border-color: var(--color-success);
+  color: white;
+}
+.keyboard-key.incorrect {
+  background: var(--color-gray-300);
+  border-color: var(--color-gray-300);
+  color: white;
+}
+.keyboard-key.misplaced {
+  background: var(--color-warning);
+  border-color: var(--color-warning);
+  color: white;
+}
