--- a/src/styles.css
+++ b/src/styles.css
@@ -278,3 +278,13 @@ h1 {
   border-color: var(--color-warning);
   color: white;
 }
+
+/* Reset Button */
+.reset-button {
+  background-color: var(--color-gray-900);
+  color: var(--color-gray-100);
+  font-weight: 700;
+  border-radius: 4px;
+  padding: 0.6em 1em;
+  margin-top: 1em;
+}
